@@ -1,0 +1,13 @@
+<table class="table">
+    <tr>
+        <td><img src="/assets/images/{top_1}.jpeg"/></td>
+    </tr>
+    <tr>
+        <td><td><img src="/assets/images/{middle}.jpeg"/></td>
+    </tr>
+    <tr>
+        <td><td><img src="/assets/images/{bottom}.jpeg"/></td>
+    </tr>
+
+</table>
+
