@@ -1,0 +1,5 @@
+<select id="top" name="botpart"  onchange="this.form.submit();" class="dropdown">
+    <option>pick one</option>
+    {bots}
+    <option>{piece}</option>
+    {/bots}
