@@ -1,0 +1,5 @@
+<select id="top" name="midpart"  onchange="this.form.submit();" class="dropdown">
+    <option>pick one</option>
+    {mids}
+    <option>{piece}</option>
+    {/mids}
