@@ -1,0 +1,9 @@
+<h2>Assemble Bots<h2>
+
+        <select id="top" name="toppart" onchange="this.form.submit();" class="dropdown">
+            <option>pick one</option>
+            {tops}
+            <option>{piece}</option>
+            {/tops}
+
+
