@@ -1,0 +1,24 @@
+<div id="section">
+    <form method="post">
+        <table class="table">
+            <tr><td>{toplist}</td></tr>
+    </form>
+    <form method="post">
+        <tr><td>{midlist}</td></tr>
+    </form>
+    <form method="post">
+        <tr>
+            <td>
+                {botlist}
+            </td>
+        </tr>
+        </table>
+    </form>
+    <div/>
+    <div id="section">
+        {assembleparts}
+        <div/>
+        <button>Assemble!<button/>
+
+
+
